alerts-demo-k8s/02-alerts-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: alerts-api
  namespace: alerts-demo
spec:
  selector:
    app: alerts
  ports:
    - port: 3000
      targetPort: 8080
