alerts-demo-k8s/08-alerts-gateway-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: alerts-gateway
  namespace: alerts-demo
spec:
  selector:
    app: alerts-gateway
  ports:
    - port: 3000
      targetPort: 8081
